native/desktop-macos/headers/desktop_macos.h

typedef struct DisplayLinkBox DisplayLinkBox;
typedef struct MetalView MetalView;
typedef uint32_t ScreenId;
typedef void *MetalCommandQueueRef;
typedef double PhysicalPixels;
typedef struct PhysicalSize {
  PhysicalPixels width;
  PhysicalPixels height;
} PhysicalSize;
typedef void *MetalTextureRef;
typedef void (*DisplayLinkCallback)(void);
void dispatcher_main_exec_async(void (*f)(void));
bool metal_view_get_is_opaque(const struct MetalView *view);
void metal_view_present(const struct MetalView *view,
                        MetalCommandQueueRef queue,
                        bool wait_for_ca_transaction);
struct PhysicalSize metal_view_get_texture_size(const struct MetalView *view);
MetalTextureRef metal_view_next_texture(const struct MetalView *view);
void metal_deref_texture(MetalTextureRef texture);
struct DisplayLinkBox *display_link_create(ScreenId screen_id, DisplayLinkCallback on_next_frame);
void display_link_drop(struct DisplayLinkBox *display_link);
void display_link_set_running(struct DisplayLinkBox *display_link, bool value);