kotlin-desktop-toolkit/src/main/java/org/jetbrains/desktop/macos/generated/desktop_macos_h.java


    /**
     * {@snippet lang=c :
     * bool metal_view_get_is_opaque(const struct MetalView *view)
     * }
     */
    public static boolean metal_view_get_is_opaque(MemorySegment view) {
        var mh$ = metal_view_get_is_opaque.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_view_get_is_opaque", view);
            }
            return (boolean)mh$.invokeExact(view);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_view_present {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_BOOL
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_view_present");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void metal_view_present(const struct MetalView *view, MetalCommandQueueRef queue, bool wait_for_ca_transaction)
     * }
     */
    public static FunctionDescriptor metal_view_present$descriptor() {
        return metal_view_present.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void metal_view_present(const struct MetalView *view, MetalCommandQueueRef queue, bool wait_for_ca_transaction)
     * }
     */
    public static MethodHandle metal_view_present$handle() {
        return metal_view_present.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void metal_view_present(const struct MetalView *view, MetalCommandQueueRef queue, bool wait_for_ca_transaction)
     * }
     */
    public static MemorySegment metal_view_present$address() {
        return metal_view_present.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void metal_view_present(const struct MetalView *view, MetalCommandQueueRef queue, bool wait_for_ca_transaction)
     * }
     */
    public static void metal_view_present(MemorySegment view, MemorySegment queue, boolean wait_for_ca_transaction) {
        var mh$ = metal_view_present.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_view_present", view, queue, wait_for_ca_transaction);
            }
            mh$.invokeExact(view, queue, wait_for_ca_transaction);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_view_get_texture_size {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            PhysicalSize.layout(),
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_view_get_texture_size");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct PhysicalSize metal_view_get_texture_size(const struct MetalView *view)
     * }
     */
    public static FunctionDescriptor metal_view_get_texture_size$descriptor() {
        return metal_view_get_texture_size.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct PhysicalSize metal_view_get_texture_size(const struct MetalView *view)
     * }
     */
    public static MethodHandle metal_view_get_texture_size$handle() {
        return metal_view_get_texture_size.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct PhysicalSize metal_view_get_texture_size(const struct MetalView *view)
     * }
     */
    public static MemorySegment metal_view_get_texture_size$address() {
        return metal_view_get_texture_size.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct PhysicalSize metal_view_get_texture_size(const struct MetalView *view)
     * }
     */
    public static MemorySegment metal_view_get_texture_size(SegmentAllocator allocator, MemorySegment view) {
        var mh$ = metal_view_get_texture_size.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_view_get_texture_size", allocator, view);
            }
            return (MemorySegment)mh$.invokeExact(allocator, view);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_view_next_texture {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_view_next_texture");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MetalTextureRef metal_view_next_texture(const struct MetalView *view)
     * }
     */
    public static FunctionDescriptor metal_view_next_texture$descriptor() {
        return metal_view_next_texture.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MetalTextureRef metal_view_next_texture(const struct MetalView *view)
     * }
     */
    public static MethodHandle metal_view_next_texture$handle() {
        return metal_view_next_texture.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MetalTextureRef metal_view_next_texture(const struct MetalView *view)
     * }
     */
    public static MemorySegment metal_view_next_texture$address() {
        return metal_view_next_texture.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MetalTextureRef metal_view_next_texture(const struct MetalView *view)
     * }
     */
    public static MemorySegment metal_view_next_texture(MemorySegment view) {
        var mh$ = metal_view_next_texture.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_view_next_texture", view);
            }
            return (MemorySegment)mh$.invokeExact(view);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_deref_texture {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_deref_texture");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void metal_deref_texture(MetalTextureRef texture)
     * }
     */
    public static FunctionDescriptor metal_deref_texture$descriptor() {
        return metal_deref_texture.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void metal_deref_texture(MetalTextureRef texture)
     * }
     */
    public static MethodHandle metal_deref_texture$handle() {
        return metal_deref_texture.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void metal_deref_texture(MetalTextureRef texture)
     * }
     */
    public static MemorySegment metal_deref_texture$address() {
        return metal_deref_texture.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void metal_deref_texture(MetalTextureRef texture)
     * }
     */
    public static void metal_deref_texture(MemorySegment texture) {
        var mh$ = metal_deref_texture.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_deref_texture", texture);
            }
            mh$.invokeExact(texture);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class display_link_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_INT,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("display_link_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct DisplayLinkBox *display_link_create(ScreenId screen_id, DisplayLinkCallback on_next_frame)
     * }
     */
    public static FunctionDescriptor display_link_create$descriptor() {
        return display_link_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct DisplayLinkBox *display_link_create(ScreenId screen_id, DisplayLinkCallback on_next_frame)
     * }
     */
    public static MethodHandle display_link_create$handle() {
        return display_link_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct DisplayLinkBox *display_link_create(ScreenId screen_id, DisplayLinkCallback on_next_frame)
     * }
     */
    public static MemorySegment display_link_create$address() {
        return display_link_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct DisplayLinkBox *display_link_create(ScreenId screen_id, DisplayLinkCallback on_next_frame)
     * }
     */
    public static MemorySegment display_link_create(int screen_id, MemorySegment on_next_frame) {
        var mh$ = display_link_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("display_link_create", screen_id, on_next_frame);
            }
            return (MemorySegment)mh$.invokeExact(screen_id, on_next_frame);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class display_link_drop {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("display_link_drop");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void display_link_drop(struct DisplayLinkBox *display_link)
     * }
     */
    public static FunctionDescriptor display_link_drop$descriptor() {
        return display_link_drop.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void display_link_drop(struct DisplayLinkBox *display_link)
     * }
     */
    public static MethodHandle display_link_drop$handle() {
        return display_link_drop.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void display_link_drop(struct DisplayLinkBox *display_link)
     * }
     */
    public static MemorySegment display_link_drop$address() {
        return display_link_drop.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void display_link_drop(struct DisplayLinkBox *display_link)
     * }
     */
    public static void display_link_drop(MemorySegment display_link) {
        var mh$ = display_link_drop.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("display_link_drop", display_link);
            }
            mh$.invokeExact(display_link);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class display_link_set_running {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_BOOL
        );
